Finish all of the feature in Generator Tabs. Optimization, Design can be changed later. Like button color, clickable scheduler.
Still need to implement Lab binder feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
         <item>NURS - Nursing</item>
         <item>PHIL - Philosophy</item>
         <item>PHSC - Physics</item>
+        <item>PSYC - Psychology</item>
         <item>SOCI - Sociology</item>
         <item>SOCW - Social Work</item>
         <item>THEA - Theatre</item>
